fixed the spacing and font size

--- a/service.css
+++ b/service.css
@@ -18,12 +18,22 @@
         margin-left: 2px;
         margin-bottom: 2%;
     }
+    
+    h3{
+        margin-top: 4%;
+        margin-bottom: 2%;
+    }
+    
     body{
         display: block;
         margin: 0 auto;
         padding: 0;
         text-align: left;
         width:100%;
+    }
+    
+    input{
+        font-size: 12px;
     }
     
     #columns{
